# pretty-graun-thumbnails

./: .gitignore  Cargo.toml  README.md  fastly.toml
src/: index.html  main.rs
