[package]
name = "fastly-compute-rust"
version = "0.1.0"
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastly = "^0.8.1"
svg = "0.10.0"
chrono = "0.4.19"
rand = "0.8.4"
serde_json = "1.0.78"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
imageproc = "0.22.0"
rusttype = "0.9.2"
urlencoding = "2.1.0"